--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,7 +6,7 @@
     font-weight: bold;
     font-size: $l-size;
     width: 100%;
-    margin-bottom: $xl-size;
+    margin-bottom: 0;
     padding: 2.4rem;
 }
 
@@ -14,6 +14,11 @@
     opacity: .5;
 }
 
+@media (min-width: $desktop-breakpoint) {
+    .big-button {
+        margin-bottom: $xl-size;
+    }
+}
 .button {
     background-color: $purple;
     border: none;
