--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,9 +2,11 @@
 @import './base/settings';
 @import './base/base';
 @import './base/test';
+
 @import './components/header';
 @import './components/button';
 @import './components/option';
 @import './components/add-option';
 @import './components/container';
 @import './components/widget';
+@import './components/modal';
